--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,7 @@
-# Created by https://www.gitignore.io
-
-#pycharm
-.idea/
-
-### OSX ###
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-
-### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+*$py.class
 
 # C extensions
 *.so
@@ -43,6 +14,7 @@ develop-eggs/
 dist/
 downloads/
 eggs/
+.eggs/
 lib/
 lib64/
 parts/
@@ -51,12 +23,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+.spec
 
 # Installer logs
 pip-log.txt
@@ -66,30 +33,21 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
+.coverage.*
 .cache
 nosetests.xml
 coverage.xml
+*,cover
 
 # Translations
 *.mo
 *.pot
 
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-
-### Django ###
+# Django stuff:
 *.log
-*.pot
-*.pyc
-__pycache__/
-*/__pycache__/
-polls/__pycache__/*
-local_settings.py
-*/migrations/*
 
-.env
-db.sqlite3
+# IDEs
+# http://www.jetbrains.com/pycharm/webhelp/project.html
+.idea
+.iml
+.vscode
